--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ pages:
   stage: deploy
   script:
     - apt-get update -qq && apt-get install -y git  # needed by Documenter
-    - julia -e 'using Pkg; Pkg.add(pwd()); Pkg.build("ABMEv");'  # rebuild Julia (can be put somewhere else I'm sure
+    - julia -e 'using Pkg; Pkg.add(PackageSpec(path =pwd())); Pkg.build("ABMEv");'  # rebuild Julia (can be put somewhere else I'm sure
     - julia -e 'using Pkg; import ABMEv; Pkg.add("Documenter")'  # install Documenter
     - julia --color=yes docs/make.jl  # make documentation
     - mv docs/build public  # move to the directory picked up by Gitlab pages
