--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,10 +7,10 @@
   script:
     # Let's run the tests. Substitute `coverage = false` below, if you do not
     # want coverage results.
-    - julia -e 'using Pkg; Pkg.add(PackageSpec(path =pwd())); Pkg.build("EVOID"); Pkg.test("EVOID"; coverage = true)'
+    - julia -e 'using Pkg; Pkg.add(PackageSpec(path =pwd())); Pkg.build("EvoId"); Pkg.test("EvoId"; coverage = true)'
     # Comment out below if you do not want coverage results.
     - julia -e 'using Pkg; Pkg.add("Coverage");
-      import EVOID; cd(joinpath(dirname(pathof(EVOID)), ".."));
+      import EvoId; cd(joinpath(dirname(pathof(EvoId)), ".."));
       using Coverage; cl, tl = get_summary(process_folder());
       println("(", cl/tl*100, "%) covered")'
 
@@ -27,8 +27,8 @@ test:1.4:
 #   stage: deploy
 #   script:
 #     - apt-get update -qq && apt-get install -y git  # needed by Documenter
-#     - julia -e 'using Pkg; Pkg.add(PackageSpec(path =pwd())); Pkg.build("EVOID");'  # rebuild Julia (can be put somewhere else I'm sure
-#     - julia -e 'using Pkg; import EVOID; Pkg.add("Documenter")'  # install Documenter
+#     - julia -e 'using Pkg; Pkg.add(PackageSpec(path =pwd())); Pkg.build("EvoId");'  # rebuild Julia (can be put somewhere else I'm sure
+#     - julia -e 'using Pkg; import EvoId; Pkg.add("Documenter")'  # install Documenter
 #     - julia --color=yes docs/make.jl  # make documentation
 #     - mv docs/build public  # move to the directory picked up by Gitlab pages
 #   artifacts:
